OO-6986: media center with sharing, versioning, redesign